# sfmeta-reader

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
skills/sfmeta-reader/: SKILL.md
skills/sfmeta-reader/resources/: reference.md
skills/sfmeta-reader/scripts/: run.ps1  run.sh
src/: cli.rs  lib.rs  main.rs
src/parser/: format.rs  mod.rs  parse.rs
src/parser/types/: analytics.rs  automation.rs  mod.rs  object.rs  security.rs  ui.rs
src/render/: compact.rs  json.rs  mod.rs  toon.rs
src/util/: fs_walk.rs  mod.rs  token.rs
src/xml/: flatten.rs  mod.rs  options.rs
