[package]
name = "sfmeta-reader"
version = "1.0.0"
edition = "2024"
description = "Cross-platform Salesforce metadata XML reducer for LLMs (generic XML -> TOON/compact/JSON)"
license = "MIT"

[dependencies]
# CLI argument parsing - cross-platform
clap = { version = "4.5", features = ["derive"] }

# High-performance streaming XML parsing (latest 0.39)
quick-xml = { version = "0.39", features = ["encoding"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Directory traversal
walkdir = "2.5"

[profile.release]
# Optimize for speed
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Remove debug symbols